fix: use scale for gap

--- a/indigo/css/src/utilities/_grids.scss
+++ b/indigo/css/src/utilities/_grids.scss
@@ -16,7 +16,6 @@ $col-min: 34rem; // 34 * 16 = 544px
   grid-auto-rows: auto;
 }
 
-$gaps: (1, 2, 4, 8, 12, 16, 24, 32);
 $cols: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
 $rows: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
 
@@ -107,9 +106,9 @@ $rows: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
   }
 }
 
-@each $g in $gaps {
-  .gap#{$g} {
-    gap: #{$g}px;
+@each $i, $dim in $scale {
+  .gap#{$i} {
+    gap: #{$dim};
   }
 }
 
